// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bytes Usage should format correctly with only usedBytes 1`] = `
<span>
  <div
    class="euiText css-1py2xv4-euiText-m"
  >
    50.0 B
  </div>
</span>
`;

exports[`Bytes Usage should format correctly with used and max bytes 1`] = `
<span>
  <div
    class="euiText css-1py2xv4-euiText-m"
  >
    50.0 B / 100.0 B
  </div>
</span>
`;

exports[`BytesPercentageUsage should format correctly with used bytes and max bytes 1`] = `
<span>
  <div
    class="euiText css-1py2xv4-euiText-m"
  >
    50.00%
  </div>
  <div
    class="euiText css-6o5696-euiText-s-euiTextColor-subdued"
  >
    50.0 B / 100.0 B
  </div>
</span>
`;

exports[`BytesPercentageUsage should return zero bytes if both parameters are not present 1`] = `
<div
  class="euiText css-1py2xv4-euiText-m"
>
  0
</div>
`;
